# SmartTicket

./: .env.example  .gitignore  CHANGELOG.md  DPA.md  INSTALLATION.MD  README.md  ROADMAP.md  docker-compose.yml  render.yaml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  constants.py  database.py  dependencies.py  email_utils.py  ingest_pdf.py  ingest_postgres.py  main.py  migrate.py  mistral_client.py  models.py  notifications.py  pdf_export.py  pyproject.toml  rag_reranking.py  requirements-dev.txt  requirements.txt  schemas.py  start-postgres-windows.sh
backend/db/: init-db.sql
backend/routers/: ai.py  analytics.py  auth.py  instance.py  knowledge.py  messages.py  notifications.py  sessions.py  users.py
backend/tests/: conftest.py  test_admin_setup.py  test_analytics.py  test_api.py  test_close_session_indexing.py  test_csv_user_import.py  test_email_verification.py  test_guest_session_rate_limit.py  test_guest_sessions.py  test_knowledge_base_permissions.py  test_notifications.py  test_password_reset.py  test_rag_evaluation.py  test_rag_reranking.py  test_register_rate_limit.py  test_schema_consistency.py  test_session_resolve.py  test_session_search.py  test_subscription_kill_switch.py  test_supervisor_role.py  test_user_data_export.py  test_utils.py
docs/: .~lock.Cahier_charges_corriger.odt#  Cahier_architecture.docx  Cahier_charges_corriger.odt  FLEET_PROVISIONING_PLAN.md  Plan_Projet.xlsx  schema_bdd.drawio
docs/C14/: 02_modelisation_donnees.md  03_parcours_utilisateurs.md
docs/C15/: 01_specifications_techniques.md  02_diagramme_flux_donnees.md  03_eco_responsabilite.md  04_poc_preproduction.md
docs/E1/: AUDIT_B1.md  MODELISATION_MERISE.md  RAPPORT_B1.md
docs/E3/: AUDIT_E3.md  IMPLEMENTATION_SUMMARY.md  RAG_DECISIONS_LOG.md
docs/E4/: RAPPORT_SOUTENANCE.md  RAPPORT_SOUTENANCE_C14_C19.md
docs/E4/C14/: 01_specifications_fonctionnelles.md  04_accessibilite.md  README.md
docs/E4/C15/: 00_inventaire_technique.md  (+2 more)
frontend/: Dockerfile  jest.config.js  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/__tests__/: AdminDashboard.test.tsx  AiAssistantResolve.test.tsx  AiAssistantSuggestions.test.tsx  AppSidebar.test.tsx  CsvImportDialog.test.tsx  ForgotPasswordPage.test.tsx  GuestClaimBanner.test.tsx  LanguageToggle.test.tsx  LoginPage.test.tsx  NotificationBell.test.tsx  OnboardingModal.test.tsx  ResetPasswordPage.test.tsx  SavDashboard.test.tsx  SettingsPage.test.tsx  SetupPage.test.tsx  SignUpPage.test.tsx  StartChatPage.test.tsx  SupervisorDashboard.test.tsx  UserDashboard.test.tsx  VerifyEmailPage.test.tsx  api.test.ts  csv.test.ts  dateGrouping.test.ts  proxy.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: GuestClaimBanner.tsx  LanguageToggle.tsx  NotificationBell.tsx  ThemeToggle.tsx  app-sidebar.tsx  theme-provider.tsx
frontend/hooks/: useCurrentUser.ts
frontend/lib/: csv.ts
frontend/scripts/: verify-production-build.mjs
frontend/test-utils/: fetchMock.ts
frontend/types/: streamdown.d.ts
ops/: README.md  db.py  delete_client.py  notify.py  provision_client.py  render_client.py  update_all_instances.py
ops/tests/: conftest.py  test_delete_client.py  test_provision_rollback.py  test_render_client.py
(+38 files in other folders)
