[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartticket-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "apscheduler",
  "requests",
  "psycopg2-binary",
  "sqlalchemy",
  "pgvector",
  "python-multipart",
  "passlib[bcrypt]",
  "bcrypt==4.0.1",
  "python-jose[cryptography]",
  "email-validator>=2.0.0",
  "python-dotenv",
  "slowapi",
  "fpdf2",
  "langchain-community",
  "beautifulsoup4",
  "langchain-text-splitters",
  "lxml==6.0.2",
  "pypdf==6.9.2",
  "python-docx==1.2.0",
  "typing-extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "httpx",
  "ruff==0.6.9",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes (imports inutilisés, variables non utilisées)
  "I",   # isort (ordre des imports)
]
ignore = [
  "E501",  # ligne trop longue — géré par line-length
  "E402",  # import pas en haut du fichier — intentionnel (load_dotenv avant imports, env vars avant app)
  "E712",  # comparaisons == True / == False — requis par les filtres SQLAlchemy ORM
  "I001",  # ordre des imports — isort génère trop de bruit sur la base existante
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811"]
"__init__.py" = ["F401"]
