[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smartticket-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.139.0",
  "uvicorn==0.50.2",
  "apscheduler==3.11.3",
  "requests==2.34.2",
  "psycopg2-binary==2.9.12",
  "sqlalchemy==2.0.51",
  "pgvector==0.5.0",
  "python-multipart==0.0.32",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.0.1",
  "python-jose[cryptography]==3.5.0",
  "email-validator==2.3.0",
  "python-dotenv==1.2.2",
  "slowapi==0.1.10",
  "redis==8.0.1",
  "fpdf2==2.8.7",
  "langchain-community==0.4.2",
  "beautifulsoup4==4.15.0",
  "langchain-text-splitters==1.1.2",
  "lxml==6.0.2",
  "pypdf==6.9.2",
  "python-docx==1.2.0",
  "typing-extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "httpx==0.28.1",
  "ruff==0.6.9",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes (imports inutilisés, variables non utilisées)
  "I",   # isort (ordre des imports)
]
ignore = [
  "E501",  # ligne trop longue — géré par line-length
  "E402",  # import pas en haut du fichier — intentionnel (load_dotenv avant imports, env vars avant app)
  "E712",  # comparaisons == True / == False — requis par les filtres SQLAlchemy ORM
  "I001",  # ordre des imports — isort génère trop de bruit sur la base existante
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F811"]
"__init__.py" = ["F401"]
